--- a/assets/sass/components/_navbar.scss
+++ b/assets/sass/components/_navbar.scss
@@ -1,4 +1,4 @@
-#blur {
-    -webkit-backdrop-filter: blur(8px);
-    backdrop-filter: blur(8px);
-  }
+.navbar.scrolled {
+  background-color: #333; /* Color sólido */
+  opacity: 1; /* Opacidad completa */
+}
