commit final revisión con prettier y realización de la documentación en el README.md

--- a/assets/sass/layout/_testimony.scss
+++ b/assets/sass/layout/_testimony.scss
@@ -1,18 +1,19 @@
 .testimony__statements {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 3rem;
 }
 
 .testimony__statements-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (min-width: 576px) {
-    .testimony__statements {     // clase de ejemplo
-         flex-direction: row;
+  .testimony__statements {
+    // clase de ejemplo
+    flex-direction: row;
   }
-  }
+}
